2단계 - 지하철 구간 추가 리팩터링 (#294)
* 상행 종점인 구간을 새로운 노선으로 추가하는 인수 테스트 추가

* 상행 종점인 구간을 새로운 노선으로 추가하는 기능 및 테스트 추가

* 상행역과 하행역이 모두 등록된 구간을 새로운 노선으로 추가하는 인수 테스트 추가

* 상행역과 하행역이 모두 등록되지 않은 구간을 새로운 노선으로 추가하는 인수 테스트 추가

* 역 사이에 새로운 구간을 추가하는 인수 테스트 추가

* 역 사이에 새로운 구간을 추가하는 단위 테스트 추가

* 구간 추가 기능 구현

* 구간 추가 기능 리팩토링

* 구간 추가 기능 리팩토링(진행중)

* 구간 추가 기능 리팩토링(진행중)

* 구간 추가 기능 리팩토링

* 구간 추가 기능 리팩토링

* 구간 찾기 기능 리팩토링

* 전체적인 코드 리팩토링

* Sections 일급 컬렉션 분리

* AddSectionCondition -> SectionAddCondition 변경

* 불필요한 코드 삭제